--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,7 @@
     display: none;
 }
 iframe {
-    background-color: rgba(1.,1.,1.,1.);
+    background-color: rgba(0.,0.,0.,1.);
 }
 information {
     color: #ff7 !important;
@@ -24,7 +24,7 @@ html{
     background-color: transparent !important;
 }
 body{
-    background-color: rgba(1.,1.,1.,.25) !important;
+    background-color: rgba(1.,1.,1.,.0) !important;
 }
 .row{
     margin-right: 0px !important;
@@ -35,11 +35,11 @@ body{
     background-color: rgba(1.,1.,1.,.8) !important;
     border-width: 5px !important;
     font-size: 18px !important;
-    color: black !important;
+    color: #fff !important;
 }
 .btn:hover {
     background-color: rgba(1.,1.,1.,.7) !important;
-    color: #000 !important;
+    color: #fff !important;
 }
 
 .btn-outline-success {
@@ -50,6 +50,10 @@ body{
     /* color: #ff0 !important; */
     border-color: #ff7 !important;
 }
+.btn-outline-warning:hover {
+    color: #000 !important;
+}
+
 .btn-outline-primary {
     /* color: #99f !important; */
     border-color: #77f !important;
@@ -69,7 +73,7 @@ body{
 }
 
 label{
-    color: #000; 
+    color: #fff; 
 }
 
 .table td, .table th {
@@ -84,7 +88,7 @@ label{
 }
 
 .table th, .table td {
-    border: 1px solid #000 !important;
+    border: 1px solid #fff !important;
     text-align: center !important;
 }
 
@@ -96,14 +100,14 @@ table {
     border-spacing: 2px !important;
 }
 .form-control, .form-control:focus{
-    color: #000 !important;
-    background-color: rgba(255, 255, 255, .5) !important;
-    border-color: #000 !important;
+    color: #fff !important;
+    background-color: rgba(0, 0, 0, .5) !important;
+    border-color: #fff !important;
 }
 .form-control:disabled, .form-control[readonly] {
-    color: #aaa !important;
-    background-color: rgba(255, 255, 255, .25) !important;
-    border-color: #000 !important;
+    color: #555 !important;
+    background-color: rgba(0, 0, 0, .25) !important;
+    border-color: #fff !important;
 }
 
 .pointer {
@@ -111,7 +115,7 @@ table {
 }
 
 .no-pointer {
-    background-color: #000 !important;
+    background-color: #fff !important;
 }
 
 .modal {
@@ -122,7 +126,7 @@ table {
 	animation:blinking 0.8s infinite;
 }
 @keyframes blinking{
-	50%{		color: #000;	}
+	50%{		color: #fff;	}
 	100%{	color: #f70;	}
 }
 
@@ -132,7 +136,7 @@ table {
 
 @keyframes white-blinker {
 	50% {
-		color: #000;
+		color: #fff;
 	}
 }
 
