--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,7 +3,7 @@
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace !important;
   font-weight: bold!important;
   font-size: 18px !important;
-  color: #000;
+  color: #fff;
 }
 
 .logged_in_content{
