--- a/www/css/style.css
+++ b/www/css/style.css
@@ -144,10 +144,21 @@ table {
     max-width: 100% !important;
 }
 
+input {
+    border: 2px solid #0f0 !important;
+    border-radius: 10px 10px 10px 10px;   
+    background-color: rgba(0, 0, 0, 0.85);
+    padding: 5px;
+}
 
-
-
-
+textarea {
+    border: 2px solid #0f0 !important;
+    border-radius: 10px 10px 10px 10px;   
+    background-color: rgba(0, 0, 0, 0.85);
+    padding: 5px;
+    width:100%;
+    color: #fff;
+} 
 
 
 
