--- a/www/css/style.css
+++ b/www/css/style.css
@@ -148,12 +148,14 @@ input {
     border: 2px solid #0f0 !important;
     border-radius: 10px 10px 10px 10px;   
     background-color: rgba(0, 0, 0, 0.85);
+    padding: 5px;
 }
 
 textarea {
     border: 2px solid #0f0 !important;
     border-radius: 10px 10px 10px 10px;   
     background-color: rgba(0, 0, 0, 0.85);
+    padding: 5px;
     width:100%;
     color: #fff;
 } 
