--- a/www/css/style.css
+++ b/www/css/style.css
@@ -158,6 +158,7 @@ textarea {
     padding: 5px;
     width:100%;
     color: #fff;
+    text-align: left !important;
 } 
 
 
@@ -317,19 +318,6 @@ input {
     border-radius: 10px 10px 10px 10px;   
     background-color: rgba(0, 0, 0, 0.85);
     padding: 5px;
-}
-
-textarea {
-    border: 2px solid #0f0 !important;
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 5px;
-    width:100%;
-} 
-
-
-textarea{
-    color: #fff;
 }
 
 span.glyphicon.glyphicon-circle-arrow-right
