--- a/www/css/style.css
+++ b/www/css/style.css
@@ -198,7 +198,10 @@ input[type=checkbox] { visibility: hidden; }
 
 .CodeMirror{
     height: auto;
+}
+.CodeMirror-code{
     text-align: center;
+    border: 2px solid #0f0 !important;
 } 
 
 /* 
