--- a/www/css/style.css
+++ b/www/css/style.css
@@ -204,7 +204,7 @@ input[type=checkbox] { visibility: hidden; }
     border: 2px solid #0f0 !important;
 } 
 .cm-builtin{
-    color: #fff;
+    color: #fff !important;
 }
 
 /* 
