--- a/www/css/style.css
+++ b/www/css/style.css
@@ -36,6 +36,7 @@ body{
     border-width: 5px !important;
     font-size: 18px !important;
     color: #fff !important;
+    margin: 5px;
 }
 .btn:hover {
     background-color: rgba(1.,1.,1.,.7) !important;
