--- a/www/css/style.css
+++ b/www/css/style.css
@@ -46,7 +46,7 @@ body{
 
 .btn-outline-success {
     /* color: #0f0 !important; */
-    border-color: #0f0 !important;
+    border-color: #fff !important;
 }
 .btn-outline-warning {
     /* color: #ff0 !important; */
