--- a/www/css/style.css
+++ b/www/css/style.css
@@ -34,9 +34,9 @@ body{
 
 .btn {
     background-color: rgba(1.,1.,1.,.8) !important;
-    border-width: 5px !important;
+    border-width: 10px !important;
     font-size: 14px !important;
-    color: #fff !important;
+    color: #999 !important;
     margin: 5px !important;
 }
 .btn:hover {
