--- a/www/css/style.css
+++ b/www/css/style.css
@@ -34,7 +34,8 @@ body{
 
 .btn {
     background-color: rgba(1.,1.,1.,.8) !important;
-    border-width: 10px !important;
+    border-width: 4px !important;
+    border-radius: 4px !important;
     font-size: 14px !important;
     color: #999 !important;
     margin: 5px !important;
