--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,13 +35,14 @@ body{
 .btn {
     background-color: rgba(1.,1.,1.,.8) !important;
     border-width: 5px !important;
+    border-radius: 10px !important;
     font-size: 14px !important;
     color: #fff !important;
     margin: 5px !important;
 }
 .btn:hover {
-    background-color: rgba(1.,1.,1.,.7) !important;
-    color: #fff !important;
+    background-color: rgba(1.,1.,1.,1.) !important;
+    color: #000 !important;
 }
 
 .btn-outline-success {
