--- a/www/css/style.css
+++ b/www/css/style.css
@@ -47,7 +47,7 @@ body{
 
 .btn-outline-success {
     /* color: #0f0 !important; */
-    border-color: #999 !important;
+    border-color: #fff !important;
 }
 .btn-outline-warning {
     /* color: #ff0 !important; */
