--- a/www/css/style.css
+++ b/www/css/style.css
@@ -205,6 +205,7 @@ input[type=checkbox] { visibility: hidden; }
 .CodeMirror-code{
     text-align: left !important;
     border: 2px solid #fff !important;
+    padding: 10px !important;
 } 
 .cm-builtin{
     color: #fff !important;
