--- a/www/css/style.css
+++ b/www/css/style.css
@@ -210,383 +210,33 @@ input[type=checkbox] { visibility: hidden; }
 .cm-builtin{
     color: #fff !important;
 }
-
-/* 
-
-
-
-
-p,
-h1,
-h2,
-h3,
-h4, 
-h6,
-input,
-textarea,
-a,
-label,
-.toast-container div,
-.the-font
-{
-  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace !important;
-  font-weight: bold!important;
-}
-
-.webGLDiv {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
+.split {
     height: 100%;
-    width: 100%;
-    z-index: 0;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-content, nav {
-    background-color: transparent!important;
-}
-.scroll-content {
-    padding-top: 0px !important;
-}
-.item-block {
-    border-bottom: none;
-}
-.list-ios {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.login-button {
-    max-width: 30%;
-}
-
-.popover-content {
-    background-color: #000 !important;
-    border: 2px solid #0f0;
-    border-radius: 10px 10px 10px 10px!important;  
-    max-width: 85%;
-    min-width: 50%;
-    width: auto !important;
-    height: auto !important;
-    margin-right: 30px !important;
-}
-backdrop {
-    opacity: 1 !important;
-
-}
-
-.loading-md .loading-wrapper, p{
-    color: #fff;
-}
-.loading-wrapper{
-    background-color: #000 !important;
-    border-radius: 5px 5px 5px 5px!important;   
-    border: 2px solid #0f0;
-}
-
-.error-btn {
-    color: #fff!important;
-    background-color: #000 !important;
-    border: 2px solid #f00!important;
-    border-radius: 5px 5px 5px 5px!important;   
-}
-.warning-btn {
-    color: #fff!important;
-    background-color: #000 !important;
-    border: 2px solid #0f0!important;
-    padding: 2px 2px 2px 2px;
-    font-size: 1.0em;
-    line-height: 1.3333333;
-    border-radius: 5px;
-    font-weight: bold !important;
-}
-
-circle {
-    stroke: #0f0!important;
-}
-.alert-title {
-    color: #fff;
-}
-.alert-button {
-    border: 2px solid #0f0 !important;
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 5px;
-}
-.alert-wrapper {
-    border: 2px solid #0f0 !important;
-    border-radius: 10px 10px 10px 10px !important;   
-    background-color: rgba(0, 0, 0, 0.85) !important;
-    padding: 5px !important;
-}
-
-
-input {
-    border: 2px solid #0f0 !important;
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 5px;
-}
-
-span.glyphicon.glyphicon-circle-arrow-right
-{
-    top:50% !important;
-    font-size: 32px !important;
-}
-span.glyphicon.glyphicon-circle-arrow-left
-{
-    top:50% !important;
-    font-size: 32px !important;
-}
-.banner
-{
-text-align: center; 
-padding: 2px; 
-width: auto;
-border: 2px solid #0f0; 
-color:#fff;
-border-radius: 5px 5px 5px 5px;   
-background-color: rgba(0, 0, 0, 0.85) !important;
-}
-
-.label-md, 
-.input-wrapper, 
-.item-inner, 
-.list.list-md, 
-.item-md,
-div.item-inner > div,
-.item-ios{
-    width:100%;
-    background-color: rgba(0, 0, 0, 0.0) !important;
-}
-
-.custom-btn {
-    border: 2px solid #0f0 !important;
-    padding: 2px 2px 2px 2px;
-    font-size: 1.0em;
-    line-height: 1.3333333;
-    border-radius: 5px;
-    background-color: #000;
-    border-color:#0f0;
-    font-weight: bold !important;
-}
-.custom-btn:hover, .custom-btn:active, .custom-btn:active:focus, .custom-btn:focus {
-    padding: 3px 3px 3px 3px;
-    font-size: 1.0em;
-    line-height: 1.3333333;
-    border-radius: 4px;
-    color: black;
-    background-color:white;
-    border-color:#0f0;    
-    font-weight: bold !important;
-}
-.item-inner {
-  border: none !important;
-  box-shadow: none !important;
-}
-
-
-.scroll-bar-indicator {
-    display: none !important;
-}
-
-::-webkit-scrollbar,
-*::-webkit-scrollbar {
-    display: none;
-}
-label
-{
-    text-align: left !important;
-    font-weight: bold !important;
-    text-shadow: 0.1em 0.1em 0.2em black ;
-    color: #fff !important;
-    text-shadow: 0.1em 0.1em 0.2em black !important;
-    font-size: 1.0em;
-}
-
-
-.carousel-control
-{
-    background: transparent;
-    background-image: none!important;
-}
-.list-ios .item-block .item-inner {
-    border-bottom: none;
-}
-.ios .page.show-page ~ .nav-decor {
-  background: transparent!important;
-}
-.alert-md .alert-radio-label {
-    color: #fff !important;
-}
-.text-input-md {
-    
-    margin: 0px;
-    padding: 0px;
-}
-.select-text {
-    color: #fff;
-    border: 2px solid #0f0 !important;
-    padding: 2px 2px 2px 2px;
-    border-radius: 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-card {
-  border: 2px solid #0f0 !important;
-  border-radius: 10px 10px 10px 10px !important;
-  background-color: rgba(0, 0, 0, 0.85) !important;
-}
-
-card img {
-    display: inline-block;
-    width: 20% !important;
-}
-.instruction
-{
-
-text-align: left; 
-padding: 5px; 
-border: 2px solid #0f0; 
-border-radius: 10px 10px 10px 10px;   
-background-color: rgba(0, 0, 0, 0.85);
-}
-card img {
-    width: 100% !important;
-}
-.picture{
-    display: inline-block !important;
-    width: 10.0rem !important;
-    float: left;
-    position: relative;
-}
-
-col {
-    padding: 0px !important;
-}
-
-grid{
-    padding: 0px !important;
-}
-
-.card-ios p {
-    color: #fff;
-}
-
-.is-hidden{
-    display: none !important;
-}
-.is-visble{
-    display: block !important;
-}
-.blue-highlight-class{
-border: 2px solid #00f !important;
-}
-.red-highlight-class{
-border: 2px solid #f00 !important;
-}
-.yellow-highlight-class{
-border: 2px solid #ff0 !important;
-}
-
-
-
-.searchbar-md .searchbar-input  {
-    border: 2px solid #0f0 !important;
-    color: white;
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 5px;
-}
-.item-md p {
-    overflow: initial !important;
-}
-.search-area{
-    margin: 0px !important;
-    padding: 0px !important;
-}
-input.search-area > input{
-    margin: 0px !important;
-    padding: 0px !important;
-}
-
-textarea {
-  height: 50vh;
-    color: white;
-    padding: 15px; 
-}
-
-#comment textarea {
-  height: 10vh !important;
-    color: white;
-    padding: 15px; 
-}
-
-.invisible {
-    visibility: hidden;
-    position: absolute;
-}
-
-.not-invisible {
-    visibility: visible;
-}
-
-.highlight-class{
-    background-color: rgba(0, 0, 0, 0.85);
-    border: 2px solid #ff0 !important;
-}
-.no-class{
-
-}
-.fixed {
+    width: 50%;
     position: fixed;
-    z-index: 10;
-    width: 100%;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding-top: 20px;
+}
+  
+  /* Control the left side */
+  .left {
+    left: 0;
   }
-    
-.alert-ios .alert-radio-label
-{
-  color: #0f0 !important;
-}
-
-.backdrop {
-    opacity: 1 !important;
-    background-color: #000 !important;
-    text-align: center !important;
-
-}
-.toast-container
-{
-    text-align: center !important; 
-}
-.toast-wrapper
-{
-    text-align: center !important;
-}
-toast{
-    text-align: center !important;
-}
-.toast-container div {
-    left: auto !important;
-    right: auto !important;
-    width: auto !important;
-    padding: 5px; 
-    border: 2px solid #0f0; 
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    text-align: center;
-}
-*/
+  
+  /* Control the right side */
+  .right {
+    right: 0;
+  }
