--- a/www/css/style.css
+++ b/www/css/style.css
@@ -211,14 +211,9 @@ input[type=checkbox] { visibility: hidden; }
     color: #fff !important;
 }
 
-.split {
-    height: 100%;
+.split { 
     width: 50%;
-    position: relative;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
+    position: absolute;
 }
 /* Control the left side */
 .left {
