--- a/www/css/style.css
+++ b/www/css/style.css
@@ -238,4 +238,5 @@ input[type=checkbox] { visibility: hidden; }
     width:12.5%;
     text-align: center;
     border: 1px solid #ff0 !important;
+    display: inline-block;
 }
