--- a/www/css/style.css
+++ b/www/css/style.css
@@ -233,10 +233,30 @@ input[type=checkbox] { visibility: hidden; }
     overflow-y: auto;
   }
 }
-
-.menu-button{
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
-    border: 1px solid #ff0 !important;
-    display: inline-block;
-    height:100%;
-}
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
