--- a/www/css/style.css
+++ b/www/css/style.css
@@ -260,3 +260,11 @@ input[type=checkbox] { visibility: hidden; }
     background-color: #4CAF50;
     color: white;
   }
+  
+  .belownav{
+    display:block; 
+    position: absolute; 
+    left:0px; 
+    top:7.5%; 
+    width:100%; 
+  }
