--- a/www/css/style.css
+++ b/www/css/style.css
@@ -233,39 +233,64 @@ input[type=checkbox] { visibility: hidden; }
     overflow-y: auto;
   }
 }
-/* Add a black background color to the top navigation */
+
+
+
 .topnav {
-    background-color: #333;
     overflow: hidden;
+    background-color: #333;
   }
   
-  /* Style the links inside the navigation bar */
-  .topnav a {
+.topnav a {
     float: left;
+    display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 14px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
+    font-size: 17px;
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
+}
+
+.topnav a.active {
     background-color: #4CAF50;
     color: white;
-  }
-  
-  .belownav{
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+.topnav a:not(:first-child) {display: none;}
+.topnav a.icon {
+    float: right;
+    display: block;
+}
+}
+
+@media screen and (max-width: 600px) {
+.topnav.responsive {position: relative;}
+.topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+}
+
+.belownav{
     display:block; 
     position: absolute; 
     left:0px; 
     top:7.5%; 
     width:100%; 
     height:92.5%;
-  }
+}
