--- a/www/css/style.css
+++ b/www/css/style.css
@@ -294,7 +294,7 @@ input[type=checkbox] { visibility: hidden; }
     width:100%; 
     height:92.5%;
 }
-div {
+.bar {
   width: 35px;
   height: 5px;
   background-color: black;
