--- a/www/css/style.css
+++ b/www/css/style.css
@@ -290,13 +290,7 @@ input[type=checkbox] { visibility: hidden; }
     display:block; 
     position: absolute; 
     left:0px; 
-    top:7.5%; 
+    top:47px; 
     width:100%; 
     height:92.5%;
-}
-.bar {
-  width: 35px;
-  height: 5px;
-  background-color: black;
-  margin: 6px 0;
 }
