--- a/www/css/style.css
+++ b/www/css/style.css
@@ -294,3 +294,10 @@ input[type=checkbox] { visibility: hidden; }
     width:100%; 
     height:92.5%;
 }
+
+.bar {
+    width: 24px;
+    height: 3px;
+    background-color: black;
+    margin: 6px 0;
+}
