--- a/www/css/style.css
+++ b/www/css/style.css
@@ -240,6 +240,8 @@ input[type=checkbox] { visibility: hidden; }
     overflow: hidden;
     background-color: #333;
     z-index: 10;
+    position: absolute;
+    width: 100%;
   }
   
 .topnav a {
@@ -249,7 +251,6 @@ input[type=checkbox] { visibility: hidden; }
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
 }
 
 .topnav a:hover {
