--- a/www/css/style.css
+++ b/www/css/style.css
@@ -282,6 +282,7 @@ input[type=checkbox] { visibility: hidden; }
     right: 0;
     top: 0;
 }
+}
 .topnav.responsive a {
     float: none;
     display: block;
