--- a/www/css/style.css
+++ b/www/css/style.css
@@ -256,6 +256,7 @@ input[type=checkbox] { visibility: hidden; }
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+    cursor: pointer;
 }
 
 .topnav a.active {
