--- a/www/css/style.css
+++ b/www/css/style.css
@@ -146,9 +146,9 @@ table {
 
 input {
     border: 2px solid #fff !important;
-    border-radius: 10px 10px 10px 10px;   
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 5px;
+    border-radius: 10px 10px 10px 10px !important;  
+    background-color: rgba(0, 0, 0, 0.85) !important;
+    padding: 5px !important;
 }
 
 textarea {
