--- a/www/css/style.css
+++ b/www/css/style.css
@@ -291,7 +291,7 @@ input[type=checkbox] { visibility: hidden; }
     text-align: left;
 }
 
-.belownav{
+#belownav{
     display:block; 
     position: absolute; 
     left:0px; 
