--- a/www/css/style.css
+++ b/www/css/style.css
@@ -307,18 +307,19 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .out-of-sight {
-    border-style: solid;
-    border-width: 1px;
-    display: block;
-    width: 100px;
-    height: 100px;
-    background-color: #0000FF;
-    transition: width 2s, height 2s, background-color 2s, transform 2s;
+    position: absolute;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    top:100%;
+    transform: rotate(0deg);
+    transition: top 2s, transform 2s;
 }
 
 .out-of-sight:target {
-    background-color: #FFCCCC;
-    width: 200px;
-    height: 200px;
-    transform: rotate(180deg);
+    position: absolute;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    transform: rotate(360deg);
 }
