--- a/www/css/style.css
+++ b/www/css/style.css
@@ -321,5 +321,6 @@ input[type=checkbox] { visibility: hidden; }
     overflow: auto;
     width: 100%;
     height: 100%;
+    top:0%;
     transform: rotate(360deg);
 }
