--- a/www/css/style.css
+++ b/www/css/style.css
@@ -279,7 +279,7 @@ input[type=checkbox] { visibility: hidden; }
 @media screen and (max-width: 600px) {
 .topnav.responsive {position: relative;}
 .topnav.responsive .icon {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
 }
