--- a/www/css/style.css
+++ b/www/css/style.css
@@ -310,7 +310,7 @@ input[type=checkbox] { visibility: hidden; }
     position: absolute;
     overflow: auto;
     width: 100%;
-    height: 100%;
+    height: auto;
     top:-200%;
     transition: top 2s;
 }
