--- a/www/css/style.css
+++ b/www/css/style.css
@@ -312,10 +312,12 @@ input[type=checkbox] { visibility: hidden; }
     width: 100%;
     height: 100%;
     border: 1px solid #fff;
-    transition: opacity 2s;
+    top:-200%;
+    transition: opacity 2s top 2s;
     opacity: 0;
 }
 
 .out-of-sight:target {
+    top:0;
     opacity: 1;
 }
