--- a/www/css/style.css
+++ b/www/css/style.css
@@ -312,12 +312,18 @@ input[type=checkbox] { visibility: hidden; }
     width: 100%;
     height: 100%;
     border: 1px solid #fff;
-    top:-200%;
-    transition: opacity 1s 1s, top 1s;
+    top:0px;
     opacity: 0;
+    width:0%;
+    height:0%;
+    left: 50%;
+    transition: opacity 1s, width 1s, height 1s, left 1s;
 }
 
 .out-of-sight:target {
-    top:0;
+    top:0px;
     opacity: 1;
+    width:100%;
+    height:100%;
+    left: 0%;
 }
