--- a/www/css/style.css
+++ b/www/css/style.css
@@ -309,14 +309,12 @@ input[type=checkbox] { visibility: hidden; }
 .out-of-sight {
     position: absolute;
     overflow: auto;
-    width: 100%;
-    height: 100%;
     border: 1px solid #fff;
     top:0px;
     opacity: 0;
-    width:0%;
-    height:0%;
-    left: 50%;
+    width:0% !important;
+    height:0% !important;
+    left: 50% !important;
     transition: opacity 1s, width 1s, height 1s, left 1s;
 }
 
