--- a/www/css/style.css
+++ b/www/css/style.css
@@ -321,7 +321,7 @@ input[type=checkbox] { visibility: hidden; }
 .out-of-sight:target {
     top:0px;
     opacity: 1;
-    width:100%;
-    height:100%;
+    width:100% !important;
+    height:100% !important;
     left: 0%;
 }
