--- a/www/css/style.css
+++ b/www/css/style.css
@@ -323,5 +323,5 @@ input[type=checkbox] { visibility: hidden; }
     opacity: 1;
     width:100% !important;
     height:100% !important;
-    left: 0%;
+    left: 0% !important;
 }
