--- a/www/css/style.css
+++ b/www/css/style.css
@@ -312,7 +312,7 @@ input[type=checkbox] { visibility: hidden; }
     border: 1px solid #fff;
     top:0px;
     opacity: 0 !important;
-    scale: 0 !important;
+    transform: scale(0, 0) !important;
     left: 50% !important;
     transition: opacity 1s, scale 1s, left 1s;
 }
@@ -320,6 +320,6 @@ input[type=checkbox] { visibility: hidden; }
 .out-of-sight:target {
     top:0px;
     opacity: 1 !important;
-    scale: 1 !important;
+    transform: scale(1, 1) !important;
     left: 0% !important;
 }
