--- a/www/css/style.css
+++ b/www/css/style.css
@@ -314,7 +314,7 @@ input[type=checkbox] { visibility: hidden; }
     opacity: 0 !important;
     transform: scale(0, 0) !important;
     left: 50% !important;
-    transition: opacity 1s, scale 1s, left 1s;
+    transition: opacity 1s, transform 1s, left 1s;
 }
 
 .out-of-sight:target {
