--- a/www/css/style.css
+++ b/www/css/style.css
@@ -277,7 +277,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav.responsive {position: absolute;}
+.topnav.responsive {position: fixed;}
 .topnav.responsive .icon {
     position: fixed;
     right: 0;
