--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,7 +249,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background-color: linear-gradient(white, rgba(0.,0.,0.,.25), rgba(0.,0.,0.,.25), black);
+    background-color: linear-gradient(black, rgba(0.,0.,0.,.25));
     z-index: 10;
     position: fixed;
     width: 100%;
