--- a/www/css/style.css
+++ b/www/css/style.css
@@ -250,6 +250,7 @@ input[type=checkbox] { visibility: hidden; }
 .topnav {
     overflow: hidden;
     background-color: linear-gradient(black, rgba(0.,0.,0.,.25));
+    border-bottom: 1px solid #fff;
     z-index: 10;
     position: fixed;
     width: 100%;
