--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,7 +249,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background: linear-gradient(black, rgba(0.,0.,0.,.25));
+    background: linear-gradient(45deg, black, transparent);
     border-bottom: 1px solid #fff;
     z-index: 10;
     position: fixed;
