--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,8 +249,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background: linear-gradient(45deg, black, transparent);
-    border-bottom: 1px solid #fff;
+    background: linear-gradient(0deg, white 1%, black 1%, rgba(0.,0.,0., .25) );
     z-index: 10;
     position: fixed;
     width: 100%;
