--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,7 +249,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background: linear-gradient(0deg, rgba(255,0,0,.8));
+    background: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,.666) 10%);
     border-bottom: 1px solid #fff;
     z-index: 10;
     position: fixed;
