--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,7 +249,7 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background: linear-gradient(0deg, black, white,black, rgba(0,0,0,.666) 10%);
+    background: linear-gradient(0deg, rgba(0,0,0,0), white, rgba(0,0,0,.666), rgba(0,0,0,.666), rgba(0,0,0,.666),rgba(0,0,0,.666), rgba(0,0,0,.666) 10%);
     z-index: 10;
     position: fixed;
     width: 100%;
