--- a/www/css/style.css
+++ b/www/css/style.css
@@ -265,13 +265,13 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .topnav a:hover {
-    background: linear-gradient(0deg, rgba(0,0,0,0), white, rgba(0,0,0,.666), rgba(0,0,0,.666), rgba(0,0,0,.666),rgba(0,0,0,.666), rgba(0,0,0,.666) 10%);
+    background: linear-gradient(0deg, rgba(0,0,0,0), white,rgba(255,255,255,.666));
     color: black !important;
     cursor: pointer;
 }
 
 .topnav a.active {
-    background: linear-gradient(0deg, rgba(0,0,0,0), white, rgba(0,0,0,.666), rgba(0,0,0,.666), rgba(0,255,0,.666),rgba(0,255,0,.666), rgba(0,255,0,.666) 10%);
+    background: linear-gradient(0deg, rgba(0,0,0,0), transparent, rgba(0,255,0,.666));
     color: white;
 }
 
