--- a/www/css/style.css
+++ b/www/css/style.css
@@ -256,7 +256,6 @@ input[type=checkbox] { visibility: hidden; }
   }
   
 .topnav a {
-    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -271,7 +270,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .topnav a.active {
-    background: linear-gradient(0deg, rgba(0,0,0,0), transparent, rgba(0,255,0,.666));
+    background: radial-gradient(#070 50%, transparent, transparent);
     color: white;
 }
 
@@ -298,7 +297,6 @@ input[type=checkbox] { visibility: hidden; }
 .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
 }
 
 #belownav{
