--- a/www/css/style.css
+++ b/www/css/style.css
@@ -281,8 +281,9 @@ input[type=checkbox] { visibility: hidden; }
 @media screen and (max-width: 600px) {
 .topnav a:not(:first-child) {display: none;}
 .topnav a.icon {
-    float: right;
-    display: block;
+    position: fixed;
+    right: 0px;
+    top: 0px;
 }
 }
 
