--- a/www/css/style.css
+++ b/www/css/style.css
@@ -281,9 +281,7 @@ input[type=checkbox] { visibility: hidden; }
 @media screen and (max-width: 600px) {
 .topnav a:not(:first-child) {display: none;}
 .topnav a.icon {
-    position: fixed;
-    right: 0px;
-    top: 0px;
+    float: right;
     display: block;
 }
 }
@@ -299,6 +297,7 @@ input[type=checkbox] { visibility: hidden; }
 .topnav.responsive a {
     float: none;
     display: block;
+    text-align: left;
 }
 
 #belownav{
