--- a/www/css/style.css
+++ b/www/css/style.css
@@ -256,6 +256,7 @@ input[type=checkbox] { visibility: hidden; }
   }
   
 .topnav a {
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
