--- a/www/css/style.css
+++ b/www/css/style.css
@@ -254,6 +254,7 @@ input[type=checkbox] { visibility: hidden; }
     position: fixed;
     width: 100%;
     height: 47px;
+    transition: height 2s;
   }
   
 .topnav a {
