--- a/www/css/style.css
+++ b/www/css/style.css
@@ -294,6 +294,12 @@ input[type=checkbox] { visibility: hidden; }
 .topnav.responsive a:not(:first-child) {
     transform: translate(0%, 100%);
 }
+.topnav.responsive a:first-child {
+    transform: translate(0%, 0%);
+}
+.topnav.responsive a:last-child {
+    transform: translate(0%, 0%);
+}
 .topnav a.icon {
     float: right;
     display: block;
